@@ -21,7 +21,7 @@ ordispider, ordisplom, ordistep, ordisurf, orditkplot, orditorp,
 ordixyplot, orglpoints, orglsegments, orglspider, orgltext, 
 pcnm, permatfull, permatswap, permutest, poolaccum, postMDS, prc,
 prestondistr, prestonfit, procrustes, protest, radfit, radlattice,
-rankindex, rarefy, rda, renyiaccum, renyi, rrarefy, scores,
+rankindex, rarefy,raupcrick, rda, renyiaccum, renyi, rrarefy, scores,
 showvarparts, spandepth, spantree, specaccum, specnumber,
 specpool2vect, specpool, spenvcor, stepacross, stressplot, swan,
 taxa2dist, taxondive, tolerance, treedist, treedive, treeheight,
