@@ -4,6 +4,12 @@ VEGAN RELEASE VERSIONS at http://cran.r-project.org/
 
 Version 2.0-1 (opened September 8, 2011)
 
+	* merge r1872: raupcrick doc fixes.
+	* merge r1869: meandist re-ordering bug fix.
+	* merge r1846: tweak speed (a bit).
+	* merge r1845: faster centroids.cca.
+	* merge r1838: a bit faster example(MDSrotate).
+	* merge r1835: add raupcrick.
 	* merge r1811: permatswap bug fix in nestedness.c.
 	* merge r1810: -pedatic -Wall fixes in monoMDS.f, ordering.f
 	
